<?xml version="1.0" encoding="utf-8"?>
<!--Layout by Pedro Damian Marta Rubio-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <TextView
        android:id="@+id/textview_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/join_los_portales_theatre"
        android:textColor="@color/navyBlue"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textview_registrationMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_registration"
        android:text="Error message"
        android:textStyle="bold"
        android:textColor="@color/errorColor"
        android:textSize="15sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/textview_registrationText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_registrationMessage"
        android:text="@string/registrationInstructions"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <ScrollView
        android:id="@+id/scrollViewRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textview_registrationText">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:inputType="textEmailAddress">

        </EditText>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp">
        </EditText>
        <EditText
            android:id="@+id/pswRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp">
        </EditText>
        <EditText
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pswRepeat"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:minHeight="48dp">
        </EditText>
        <EditText
            android:id="@+id/lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fName"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:minHeight="48dp">
        </EditText>

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lName"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:contextClickable="true"
                android:hint="@string/year_of_birth"
                android:inputType="date"
                android:minHeight="48dp">

            </EditText>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthday"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp">
        </EditText>
            <LinearLayout
                android:id="@+id/registerButtons"
                android:layout_below="@id/phone"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_register"
                    android:text="@string/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/navyBlueVariant"
                    android:textColor="@color/white">

                </Button>

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/navyBlueVariant"
                    android:textColor="@color/white"
                    android:text="@string/clear_form">

                </Button>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:layout_centerHorizontal="true"
        android:id="@+id/registerLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />


</RelativeLayout>