<?xml version="1.0" encoding="utf-8"?>
<!--Layout by Pedro Damian Marta Rubio-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/loginTextHeader"
        android:textColor="@color/navyBlue"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textview_loginErrorMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_login"
        android:text="Error message"
        android:textStyle="bold"
        android:textColor="@color/errorColor"
        android:textSize="15sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/textview_loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_loginErrorMessage"
        android:text="@string/loginInstruction"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_loginText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress">

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="password">



    </EditText>
    <LinearLayout
        android:id="@+id/loginButtons"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_login"
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/navyBlueVariant"
            android:textColor="@color/white"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/navyBlueVariant"
            android:textColor="@color/white"
            android:text="@string/register">

        </Button>

    </LinearLayout>
    <ProgressBar
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginButtons"
        android:id="@+id/loginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>